# py-logging

./: README.md  pyproject.toml
src/py_logging/: __init__.py  constants.py  main.py
src/py_logging/_logging/: __init__.py  _configs.py
src/py_logging/_logging/formatters/: __init__.py  _classes.py  default_formatters.py
