[project]
name = "py-logging"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jack Kenyon", email = "jkenyon@embracepetinsurance.com"},
]
dependencies = [
    "dynaconf>=3.2.5",
    "httpx>=0.27.0",
    "hishel>=0.0.26",
    "chardet>=5.2.0",
    "red-utils>=0.2.19",
    "pendulum>=3.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.4",
    "nox>=2024.4.15",
]
